# bottlenick

./: .gitignore  .travis.yml  Cargo.toml  README.md
.vim/: template.rs
schema/: Cargo.toml
schema/migrations/2019-11-06-054721_guilds/: down.sql  up.sql
schema/src/: lib.rs  schema.rs
src/: db.rs  main.rs  models.rs  result.rs  secrets.rs
