[package]
name = "bottlenick"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/bottlenick"
homepage = "https://github.com/SOF3/bottlenick"
readme = "README.md"
description = "Discord bot that rate-limits users from changing their nicks"

[dependencies]
bottlenick-schema = {path = "schema", version = "0.1.0"}
chrono = "0.4.9"
config = "0.10.1"
derive_more = "0.99.0"
diesel = {version = "1.4.3", features = ["postgres", "r2d2"]}
dirmod = "0.1.4"
getset = "0.0.9"
log = "0.4.8"
r2d2 = "0.8.6"
serde = {version = "1.0", features = ["derive"]}
serenity = "0.9.2"
static_assertions = "1.0"
